Fixed spacing and removed possibility to need to scroll left right

--- a/css/agency.css
+++ b/css/agency.css
@@ -9,15 +9,24 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
+    height: 100%;
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 body {
-    overflow-x: hidden;
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #222;
     color: #fff;
     padding-top: 70px;
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+@media(max-width:767px) {
+    body {
+        padding-top: 60px;
+    }
 }
 
 body.light-mode {
@@ -207,6 +216,23 @@ fieldset[disabled] .btn-xl.active {
     font-family: Montserrat;
     color: #FF6600;
     padding: 0;
+    margin-left: 10px;
+}
+
+.navbar-header {
+    padding-left: 15px;
+}
+
+@media(max-width:767px) {
+    .navbar-header {
+        padding-left: 20px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    
+    .navbar-brand {
+        margin-left: 0 !important;
+    }
 }
 
 .navbar-default .navbar-brand:hover,
